fix(jaxrs): 3 bugs + surefire argLine + CodeGraph docs + bilingual README